--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -1,6 +1,6 @@
-# Higher body mass index raises immature platelet count: evidence from Mendelian randomization analyses
+# Higher body mass index raises immature platelet count: evidence from Mendelian randomization analyses {#BMI-platelets-INTERVAL}
 
-This work is under review at xxxxxxxxx and is on the preprint server MedRXiV [@Goudswaard2021.05.19.21257443]. I performed all analyses, created all figures and tables and wrote the manuscript. 
+This work is under review at Platelets journal and is on the preprint server MedRXiV [@Goudswaard2021.05.19.21257443]. I performed all analyses, created all figures and tables and wrote the manuscript. 
 
 ## Background
 
@@ -14,22 +14,22 @@ Sysmex haematology analyzers are able to provide additional platelet characteris
 
 As these platelet characteristics provide potential information about platelet hyperactivity and given the increased thrombotic risk seen with adiposity, it is important to assess how adiposity affects platelet properties. Previous studies with modest samples sizes have implemented observational epidemiological methods to explore the effect of BMI on PLT, plateletcrit (PCT) and MPV. There is conflicting observational evidence regarding an association between BMI and PLT [@Furuncuoglu2016; @Han2018a], with some studies suggesting a positive association between BMI and MPV [@Coban2005] and other studies reporting no such association [@Heffron2018]. Furthermore, as there is evidence that immature platelet production is increased in patients with metabolic syndrome and type II diabetes [@Vaduganathan2008a; @Mijovic2015a], it is therefore important to explore whether BMI may be an independent predictor of this trait. It is currently unknown whether the influence of BMI on platelet properties and function are causal and independent of confounding effects.
 
-In this study, we used data from the INTERVAL prospective cohort (N=33388) to explore the association between BMI and platelet traits. We combined observational and Mendelian randomization (MR) approaches to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, we therefore employed MR, using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
-
 ```{r Linear-reg-MR, echo = FALSE , fig.cap="Schematic of linear regression and Mendelian randomization analyses. Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders. Under the assumptions of Mendelian randomization (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.", fig.scap = "Schematic of linear regression and Mendelian randomization analyses"}
 include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
 
 ```
 
+In this study, we used data from the INTERVAL prospective cohort (N=33388) to explore the association between BMI and platelet traits. We combined observational and Mendelian randomization (MR) approaches to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, we therefore employed MR, using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
+
 ## Methods
 
 ### Study population
 
-INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50 000 participants [@DiAngelantonio2017. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomization within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
+INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants [@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomization within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
 
 The present study was conducted on up to 33 388 European ancestry participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)). Participants were mostly of European descent.
 
-```{r INTERVAL-STROBE, echo = FALSE, out.height="80%", out.width="80%", fig.cap="A STROBE diagram outlining participants included in the INTERVAL study (N=33388)."}
+```{r INTERVAL-STROBE, echo = FALSE, out.width="80%", fig.cap="A STROBE diagram outlining participants included in the INTERVAL study (N=33388)."}
 include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
 
 ```
@@ -99,7 +99,7 @@ column_spec(1, width = "8cm")
 The Sysmex XN-1000 haematology analyzer measures multiple platelet traits, however many of these traits are closely related measurements and therefore may not be completely independent. Indeed, platelet traits showed a high degree of correlation with each other (Figure \@ref(fig:Corr-mat-dend)), in particular among similar measures. For example, measures of PLT (PLT I/F) and PCT, the latter a measurement of platelet mass, were highly positively correlated with each other but were weakly inversely correlated with other platelet measures. Measures of platelet maturity (IPF, IPC, H-IPF) were highly correlated with each other. In addition, platelet size variables (MPV, P-LCR and PDW) showed strong positive correlations with each other as well as with measures of immature platelets. 
 
 
-```{r Corr-mat-dend, echo = FALSE, out.height="50%", out.width="85%", fig.cap="Correlation matrix and dendrogram of the relationship between platelet traits. A) Correlation coefficients are provided within the matrix. Dark blue indicates a correlation coefficient (r) of 1, with dark red indicating a correlation coefficient of -1. B) A dendrogram showing the hierarchical relationship between platelet traits, where the height at which two platelet traits join is (1 – Pearson correlation coefficient (r)). PCT = plateletcrit, PLT (F) = platelet count (PLT-F channel), PLT (I) = platelet count (impedance channel), SSC = side scatter, SFL = side fluorescence, FSC = side scatter, IPC = immature platelet count, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, MPV = mean platelet volume, P-LCR = platelet large cell ratio, PDW = platelet distribution width. Dashed red lines indicate a height of 0.2, 0.3 and 0.4.", fig.scap= "Correlation matrix and dendrogram of the relationship between platelet traits."}
+```{r Corr-mat-dend, echo = FALSE, out.width="92%", fig.cap="Correlation matrix and dendrogram of the relationship between platelet traits. A) Correlation coefficients are provided within the matrix. Dark blue indicates a correlation coefficient (r) of 1, with dark red indicating a correlation coefficient of -1. B) A dendrogram showing the hierarchical relationship between platelet traits, where the height at which two platelet traits join is (1 – Pearson correlation coefficient (r)). PCT = plateletcrit, PLT (F) = platelet count (PLT-F channel), PLT (I) = platelet count (impedance channel), SSC = side scatter, SFL = side fluorescence, FSC = side scatter, IPC = immature platelet count, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, MPV = mean platelet volume, P-LCR = platelet large cell ratio, PDW = platelet distribution width. Dashed red lines indicate a height of 0.2, 0.3 and 0.4.", fig.scap= "Correlation matrix and dendrogram of the relationship between platelet traits.", fig.scap= "Correlation matrix and dendrogram of the relationship between platelet traits"}
 include_graphics(path = "figure/BMI_platelets/Corrmatrix_dendrogram.pdf", dpi = NA)
 
 ```
@@ -115,13 +115,13 @@ Beta = c(0.12,0.11,0.10,0.06,0.06,0.03,0.02,-0.02,0.01,0.01,0.01,0.01)
 SE <- c(0.006,0.006,0.006,0.006,0.007,0.007,0.006,0.006,0.007,0.006,0.006,0.007)
 P <- c(9.17E-88,1.03E-67,5.62E-57,4.73E-23,4.84E-22,5.21E-05,0.01,0.01,0.04,0.19,0.28,0.37)
 R <- c(0.133,0.096,0.094,0.020,0.008,0.006,0.026,0.006,0.008,0.003,0.040,0.007)
-Eta <- c(0.107,0.081,0.082,0.000,0.001,0.004,0.001,0.005,0.007,0.000,0.000,0.000)
+Eta <- c(0.107,0.081,0.082,'0.000',0.001,0.004,0.001,0.005,0.007,'0.000','0.000','0.000')
 CI <- c(0.012,0.012,0.012,0.012,0.013,0.013,0.012,0.012,0.013,0.012,0.012,0.013)
-Lower <- c(0.11,0.09,0.09,0.05,0.05,0.01,0.01,-0.03,0.00,0.00,-0.01,-0.01)
+Lower <- c(0.11,0.09,0.09,0.05,0.05,0.01,0.01,-0.03,'0.00','0.00',-0.01,-0.01)
 Upper <- c(0.13,0.12,0.11,0.07,0.08,0.04,0.03,-0.01,0.03,0.02,0.02,0.02)
 mytable = data.frame(cbind(Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
-colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption. Βeta coefficient is the change in platelet measure in SDs per normalized SD increase in BMI. PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SFL = side fluorescence, IPC = immature platelet count, PDW = platelet distribution width, FSC = forward scatter, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, P-LCR = platelet large cell ration, SSC = side scatter, MPV = mean platelet volume. Eta2 is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.", booktabs = TRUE, caption.short = "Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption") %>% 
+colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta squared',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption. Βeta coefficient is the change in platelet measure in SDs per normalized SD increase in BMI. PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SFL = side fluorescence, IPC = immature platelet count, PDW = platelet distribution width, FSC = forward scatter, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, P-LCR = platelet large cell ration, SSC = side scatter, MPV = mean platelet volume. Eta squared is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.", booktabs = TRUE, caption.short = "Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   landscape()
@@ -132,20 +132,20 @@ options(knitr.kable.NA = "")
 FullName <- c('Plateletcrit','Platelet count (impedence channel)','Platelet count (PLT-F channel)','Side fluorescence','Immature platelet count' ,'Platelet distribution width' ,'Forward scatter','High fluorescence immature platelet fraction','Immature platelet fraction','Side scatter','Platelet large cell ratio','Mean platelet volume')
 Name = c('PCT','PLT (I)','PLT (F)','SFL','IPC','PDW','FSC','H-IPF','IPF','P-LCR','SSC','MPV')
 N = c(27997,29682,27268,29721,27255,27998,29721,29708,27255,29721,30788,27994)
-Beta = c(0.126,0.110,0.104,0.064,0.067,0.029,0.022,-0.017,0.015,0.010,0.010,0.009)
+Beta = c(0.126,0.110,0.104,0.064,0.067,0.029,0.022,'-0.017',0.015,0.010,0.010,0.009)
 SE <- c(0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006)
 P <- c(1.46E-108,4.50E-84,6.50E-70,4.08E-28,1.27E-27,2.09E-06,1.40E-04,4.43E-03,1.29E-02,7.81E-02,9.09E-02,1.55E-01)
 R <- c(0.132,0.097,0.094,0.021,0.007,0.006,0.026,0.005,0.007,0.041,0.002,0.006)
-Eta <- c(0.107,0.082,0.083,0.000,0.001,0.004,0.001,0.005,0.007,1.58E-04,4.37E-05,4.57E-06)
+Eta <- c(0.107,0.082,0.083,'0.000',0.001,0.004,0.001,0.005,0.007,1.58E-04,4.37E-05,4.57E-06)
 CI <- c(0.011,0.011,0.012,0.011,0.012,0.012,0.011,0.012,0.012,0.011,0.011,0.012)
-Lower <- c(0.115,0.099,0.093,0.053,0.055,0.017,0.011,-0.028,0.003,-0.001,-0.002,-0.003)
-Upper <- c(0.137,0.121,0.116,0.076,0.079,0.041,0.034,-0.005,0.027,0.022,0.021)
+Lower <- c(0.115,0.099,0.093,0.053,0.055,0.017,0.011,'-0.028',0.003,'-0.001','-0.002','-0.003')
+Upper <- c(0.137,0.121,0.116,0.076,0.079,0.041,0.034,'-0.005',0.027,0.022,0.021)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
 colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
 mytable %>% kable(caption = "Age and sex adjusted estimates for the association between BMI and platelet traits. Βeta coefficient is the change in platelet measure in SDs per SD higher BMI. Eta squared is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.", booktabs = TRUE, caption.short = "Age and sex adjusted estimates for the association between BMI and platelet traits") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-  column_spec(1, width = "6cm")   %>%
+  column_spec(1, width = "4cm")   %>%
   landscape()
 ```
 
@@ -158,20 +158,20 @@ options(knitr.kable.NA = "")
 V = c( "Sex (1=female, 2=male)", "Age (years)", "Alcohol intake frequency (1=rarely, 2=<1 a week, 3=1-2 times a week, 4=most days/every day)", "Smoking frequency (1=never, 2=occasinal, 3=most days/ every day)" )
 N = c(33388, 33388, 29538, 32867)
 B = c(0.184, 0.011, -0.096, 0.073)
-SE <- c(0.011,3.81E-04,0.006,0.009)
+SE <- c(0.011,'3.81E-04',0.006,0.009)
 P <- c(9.64E-64,1.11E-182,1.57E-61,1.53E-17)
 AdjR <- c(0.008,0.025,0.009,0.002)
 Fstat <- c(285,841,275,72)
 CI <- c(0.021,0.001,0.011,0.017)
-LowerCI <- c(0.162,0.010,-0.108,0.057)
-UpperCI <- c(0.205,0.012,-0.085,0.090)
+LowerCI <- c(0.162,0.010,'-0.108',0.057)
+UpperCI <- c(0.205,0.012,'-0.085',0.090)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat, CI, LowerCI, UpperCI))
 colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
 mytable %>% kable(caption = "Associations between covariables (exposure) and standardised BMI (outcome)", booktabs = TRUE) %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "5cm")   %>%
-  column_spec(3, width = "3cm")   %>%
+column_spec(1, width = "4cm")   %>%
+  column_spec(3, width = "2.5cm")   %>%
   landscape()
 ```
 
@@ -182,10 +182,10 @@ FullName <- c('Side scatter','Forward scatter','Side fluorescence','Plateletcrit
 Name <- c('SSC','FSC','SFL','PCT','PLT (I)','MPV','PLT (F)','P-LCR','IPC','PDW','H-IPF','IPF')
 N = c(29721,29721,29721,27997,29682,27994,27268,30788,27255,27998,29708,27255)
 Beta = c(-0.014,-0.011,-0.009,-0.009,-0.006,-0.005,-0.005,-0.003,-0.003,-0.002,0.001,-0.001)
-SE <- c(4.00E-04,4.03E-04,4.05E-04,4.18E-04,4.07E-04,4.20E-04,4.28E-04,4.01E-04,4.28E-04,4.21E-04,4.08E-04,4.29E-04)
+SE <- c('4.00E-04','4.03E-04','4.05E-04','4.18E-04','4.07E-04','4.20E-04','4.28E-04','4.01E-04','4.28E-04','4.21E-04','4.08E-04','4.29E-04')
 P <- c(4.59E-274,3.72E-160,1.20E-111,2.20E-92,3.15E-51,8.11E-39,1.09E-27,4.22E-17,1.50E-13,1.32E-06,2.17E-02,3.79E-0)
-R <- c(4.12E-02,2.41E-02,1.68E-02,1.47E-02,7.58E-03,6.01E-03,4.32E-03,2.26E-03,1.96E-03,7.99E-04,1.44E-04,1.21E-04)
-CI <- c(7.84E-04,7.91E-04,7.94E-04,8.19E-04,7.98E-04,8.22E-04,8.38E-04,7.86E-04,8.39E-04,8.24E-04,8.01E-04,8.40E-04)
+R <- c('4.12E-02','2.41E-02','1.68E-02','1.47E-02','7.58E-03','6.01E-03','4.32E-03','2.26E-03','1.96E-03','7.99E-04','1.44E-04','1.21E-04')
+CI <- c('7.84E-04','7.91E-04','7.94E-04','8.19E-04','7.98E-04','8.22E-04','8.38E-04','7.86E-04','8.39E-04','8.24E-04','8.01E-04','8.40E-04')
 Lower <- c(-0.015,-0.012,-0.010,-0.009,-0.007,-0.006,-0.006,-0.004,-0.004,-0.003,0.000,-0.002)
 Upper <- c(-0.014,-0.010,-0.008,-0.008,-0.005,-0.005,-0.004,-0.003,-0.002,-0.001,0.002,0.000)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, CI, Lower, Upper))
@@ -193,7 +193,7 @@ colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE'
 mytable %>% kable(caption = "Association between age and platelet traits. Βeta coefficient is the difference in platelet characteristics per 1 year increase in age.", booktabs = TRUE, caption.short = "Association between age and platelet traits") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-  column_spec(1, width = "6cm")   %>%
+  column_spec(1, width = "3cm")   %>%
   landscape()
 ```
 
@@ -204,8 +204,8 @@ Name <- c('PLT (F)','PLT (I)','PCT','IPF','H-IPF','PDW','SSC','IPC','FSC','P-LCR
 N = c(27268,29682,27997,27255,29708,27998,29721,27255,29721,30788,29721,27994)
 Beta = c(-0.574,-0.575,-0.663,0.164,0.142,0.118,-0.076,-0.075,0.039,-0.024,-0.022,-0.014)
 SE <- c(0.012,0.011,0.011,0.012,0.012,0.012,0.012,0.012, 0.12,0.011,0.012,0.012)
-P <- c(9.88E-324,9.88E-324,9.88E-324,4.41E-42,2.24E-34,3.76E-23,5.76E-11,4.75E-10,8.06E-04,3.29E-02,5.92E-02,2.38E-01)
-R <- c(8.23E-02,8.27E-02,1.10E-01,6.72E-03,4.99E-03,3.47E-03,1.41E-03,1.39E-03,3.44E-04,1.15E-04,8.61E-05,1.39E-05)
+P <- c('9.88E-324','9.88E-324','9.88E-324','4.41E-42','2.24E-34','3.76E-23','5.76E-11','4.75E-10','8.06E-04','3.29E-02','5.92E-02','2.38E-01')
+R <- c('8.23E-02','8.27E-02','1.10E-01','6.72E-03','4.99E-03','3.47E-03','1.41E-03','1.39E-03','3.44E-04','1.15E-04','8.61E-05','1.39E-05')
 CI <- c(0.023,0.022,0.022,0.024,0.023,0.023,0.023,0.024,0.023,0.022,0.023,0.023)
 Lower <- c(-0.597,-0.597,-0.685,0.141,0.119,0.095,-0.099,-0.099,0.016,-0.047,-0.045,-0.038)
 Upper <- c(-0.551,-0.554,-0.641,0.188,0.164,0.142,-0.053,-0.052,0.062,-0.002,0.001,0.009)
@@ -214,7 +214,7 @@ colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE'
 mytable %>% kable(caption = "Association between sex and platelet traits. Beta coefficient is the difference in platelet measure in SDs in men compared with women (for sex, 1=female and 2=male).", booktabs = TRUE,caption.short = "Association between sex and platelet traits") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-  column_spec(1, width = "6cm")   %>%
+  column_spec(1, width = "3cm")   %>%
   landscape()
 ```
 
@@ -224,9 +224,9 @@ FullName <- c('High fluorescence immature platelet fraction','Immature platelet 
 Name <- c('H-IPF','IPC','IPF','SFL','FSC','MPV','P-LCR','PLT (F)','PCT','PDW','SSC','PLT (I)')
 N = c(29241,26826,26826,29254,29254,30302,29216,26839,27553,27554,29254,29215)
 Beta = c(0.047,0.047,0.038,0.018,-0.014,0.008,0.008,0.008,0.005,0.003,0.003,0.001)
-SE <- c(0.009,0.010,0.010,0.009,0.009,0.009,0.009,0.010,0.009,0.009,0.009,0.009)
-P <- c(2.81E-07,9.60E-07,6.74E-05,5.11E-02,1.34E-01,3.63E-01,4.01E-01,4.07E-01,6.01E-01,7.31E-01,7.72E-01,9.48E-01)
-R <- c(8.67E-04,8.57E-04,5.55E-04,9.59E-05,4.26E-05,-5.66E-06,-1.01E-05,-1.17E-05,-2.64E-05,-3.20E-05,-3.13E-05,-3.41E-05)
+SE <- c(0.009,0.010,0.010,0.009,0.009,0.009,0.009,'0.010',0.009,0.009,0.009,0.009)
+P <- c('2.81E-07','9.60E-07','6.74E-05','5.11E-02','1.34E-01','3.63E-01','4.01E-01','4.07E-01','6.01E-01','7.31E-01','7.72E-01','9.48E-01')
+R <- c('8.67E-04','8.57E-04','5.55E-04','9.59E-05','4.26E-05','-5.66E-06','-1.01E-05','-1.17E-05','-2.64E-05','-3.20E-05','-3.13E-05','-3.41E-05')
 CI <- c(0.018,0.019,0.019,0.018,0.018,0.018,0.018,0.019,0.019,0.019,0.018,0.018)
 Lower <- c(0.029,0.028,0.019,0.000,-0.032,-0.009,-0.010,-0.011,-0.014,-0.015,-0.015,-0.017)
 Upper <- c(0.065,0.066,0.057,0.036,0.004,0.026,0.026,0.027,0.024,0.022,0.021,0.019)
@@ -235,7 +235,7 @@ colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE'
 mytable %>% kable(caption = "Association between smoking and platelet traits. Beta coefficient is the change in platelet traits (SDs) per unit change in smoking category (1 = never, 2 = previous, 3 = current)", booktabs = TRUE, caption.short = "Association between smoking and platelet traits") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-  column_spec(1, width = "6cm")   %>%
+  column_spec(1, width = "3cm")   %>%
   landscape()
 ```
 
@@ -247,8 +247,8 @@ Name <- c('PCT','PLT (I)','PLT (F)','SSC','FSC','MPV','SFL','P-LCR','IPC','PDW',
 N = c(24757,26251,24110,26289,26289,24754,26289,27231,24098,24758,26275,24098)
 Beta = c(-0.115,-0.087,-0.074,-0.063,-0.060,-0.053,-0.042,-0.036,-0.033,-0.027,0.012,0.002)
 SE <- c(0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006)
-P <- c(6.36E-73,7.94E-45,1.94E-30,1.17E-24,3.81E-22,1.64E-16,8.90E-12,4.39E-09,2.55E-07,2.84E-05,4.52E-02,8.10E-01)
-R <- c(1.31E-02,7.45E-03,5.40E-03,3.95E-03,3.52E-03,2.70E-03,1.73E-03,1.23E-03,1.06E-03,6.67E-04,1.15E-04,-3.91E-05)
+P <- c('6.36E-73','7.94E-45','1.94E-30','1.17E-24','3.81E-22','1.64E-16','8.90E-12','4.39E-09','2.55E-07','2.84E-05','4.52E-02','8.10E-01')
+R <- c('1.31E-02','7.45E-03','5.40E-03','3.95E-03','3.52E-03','2.70E-03','1.73E-03','1.23E-03','1.06E-03','6.67E-04','1.15E-04','-3.91E-05')
 CI <- c(0.012,0.012,0.013,0.012,0.012,0.012,0.012,0.012,0.013,0.013,0.012,0.013)
 Lower <- c(-0.128,-0.099,-0.087,-0.076,-0.072,-0.065,-0.054,-0.048,-0.046,-0.039,0.000,-0.011)
 Upper <- c(-0.103,-0.075,-0.062,-0.051,-0.048,-0.040,-0.030,-0.024,-0.021,-0.014,0.025,0.014)
@@ -257,7 +257,7 @@ colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE'
 mytable %>% kable(caption = "Association between alcohol consumption and platelet traits. Beta coefficient is the change in platelet traits in SDs per unit increase in alcohol consumption (1=Rarely , 2= Less than weekly, 3=One or two weekly, 4= 3-5 weekly or every day) ", booktabs = TRUE, caption.short = "Association between alcohol consumption and platelet traits") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-  column_spec(1, width = "6cm")   %>%
+  column_spec(1, width = "3cm")   %>%
   landscape()
 ```
 
@@ -270,15 +270,15 @@ V = c("BMI (SDs)", "Age (years)", "Sex (1=female, 2=male)", "Smoking frequency (
 N = c(33388, 33388, 33388, 32867, 29538)
 B = c(0.69,-1.46,-0.01,0.05,-0.15)
 SE <- c(0.018,0.26,0.009,0.012,0.02)
-P <- c(2.3E-312,2.2E-08,4.7E-01,9.2E-05,2.9E-15)
-AdjR <- c(0.042,0.001,-1.4E-05,0.0004,0.002)
+P <- c('2.3E-312','2.2E-08','4.7E-01','9.2E-05','2.9E-15')
+AdjR <- c(0.042,0.001,'-1.4E-05',4.0E-4,0.002)
 Fstat <- c(1458.4,31.3,0.5,15.3,62.4)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat))
 colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' )
 mytable %>% kable(caption = "Association between genetic risk score for BMI with both BMI and covariables. Βeta coefficient is the change in outcome variable per unit increase in the genetic risk score for BMI", booktabs = TRUE, caption.short = "Association between genetic risk score for BMI with both BMI and covariables") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "5cm")   %>%
+column_spec(1, width = "6cm")   %>%
   landscape()
 ```
 
@@ -293,7 +293,7 @@ Name = c('SFL','IPC','FSC','PCT','IPF','PLT (I)','P-LCR','PDW','MPV','PLT (F)','
 N = c(29721,27255,29721,27997,27255,29682,30788,27998,27994,27268,29721,29708)
 Beta = c(0.083,0.064,0.052,0.052,0.044,0.035,0.034,0.035,0.029,0.026,0.018,0.015)
 SE <- c(0.028,0.030,0.028,0.029,0.030,0.028,0.028,0.029,0.029,0.030,0.028,0.028)
-P <- c(3.44E-03,3.15E-02,6.62E-02,7.22E-02,1.34E-01,2.19E-01,2.25E-01,2.29E-01,3.23E-01,3.81E-01,5.37E-01,6.10E-01)
+P <- c('3.44E-03','3.15E-02','6.62E-02','7.22E-02','1.34E-01','2.19E-01','2.25E-01','2.29E-01','3.23E-01','3.81E-01','5.37E-01','6.10E-01')
 R <- c(0.132,0.097,0.094,0.021,0.007,0.006,0.026,0.005,0.007,0.041,0.002,0.006)
 Eta <- c(0.107,0.082,0.083,0.000,0.001,0.004,0.001,0.005,0.007,1.58E-04,4.37E-05,4.57E-06)
 CI <- c(0.056,0.058,0.056,0.057,0.058,0.056,0.055,0.057,0.057,0.058,0.056,0.056)
@@ -306,12 +306,12 @@ colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE'
 mytable %>% kable(caption = "Mendelian randomization estimates for the effect of BMI on platelet traits. Βeta coefficient is the change in platelet measure in SDs per SD higher BMI", booktabs = TRUE, caption.short = "Mendelian randomization estimates for the effect of BMI on platelet traits") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-  column_spec(1, width = "6cm")   %>%
+  column_spec(1, width = "3cm")   %>%
   landscape()
 ```
 
 
-```{r BMI-platelet-forest, echo = FALSE, fig.cap="Forest plot of the Mendelian randomization (MR) and unadjusted observational estimates for the effect of BMI on platelet traits. Estimate points are filled where P < 0.05. SFL = side fluorescence, IPC = immature platelet count, H-IPF = high fluorescence immature platelet function, FSC = forward scatter, P-LCR = platelet large cell ratio, PDW = platelet distribution width, MPV = mean platelet volume, PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SSC = side scatter.", fig.scap = "Forest plot of the Mendelian randomization and unadjusted observational estimates for the effect of BMI on platelet traits."}
+```{r BMI-platelet-forest, out.width="90%", echo = FALSE, fig.cap="Forest plot of the Mendelian randomization (MR) and unadjusted observational estimates for the effect of BMI on platelet traits. Estimate points are filled where P < 0.05. SFL = side fluorescence, IPC = immature platelet count, H-IPF = high fluorescence immature platelet function, FSC = forward scatter, P-LCR = platelet large cell ratio, PDW = platelet distribution width, MPV = mean platelet volume, PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SSC = side scatter.", fig.scap = "Forest plot of the Mendelian randomization and unadjusted observational estimates for the effect of BMI on platelet traits."}
 include_graphics(path = "figure/BMI_platelets/BMI_platelet_forestplot.pdf", dpi = NA)
 
 ```
@@ -336,7 +336,7 @@ mytable %>% kable(caption = "Characteristics of COPTIC study participants", book
   #kable_paper("hover", full_width = F)
    add_indent(c(3, 4, 7:11, 13:16), level_of_indent = 1) %>%
  kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "8cm")
+column_spec(1, width = "5cm")
 ```
 
 ### Association between IPC and aggregation in COPTIC cohort
@@ -344,12 +344,12 @@ column_spec(1, width = "8cm")
 To determine the potential functional effects of variation in IPC, the COPTIC cohort was used to assess the observational association between IPC and whole blood platelet aggregation in response to a range of platelet agonists (Figure \@ref(fig:IPC-aggregation)A). In participants who were not on antiplatelet therapy (up to N=655), there was evidence for a positive association between IPC and aggregation induced by adrenaline (0.13 SD increase per SD increase in IPC, 95% CI 0.04 to 0.21, p=3.7x10-3), TRAP-6 (0.11 SD increase per SD increase in IPC, 95% 0.03 to 0.18, p=7.8x10-3) and ADP (0.08 SD per SD increase in IPC, 95% 0.01 to 0.0.15, p=0.04). As there was a high correlation among platelet traits (Figure \@ref(fig:IPC-aggregation)A, Figure \@ref(fig:IPC-aggregation)B), the effect of MPV, PLT and IPF were also assessed. PLT was associated with all four measures of aggregation, with a larger effect estimate than IPC (Figure \@ref(fig:IPC-aggregation)A). The finding that IPC does not correlate with PLT however suggests that the effect of IPC on platelet aggregation is independent of the effect of PLT on platelet aggregation (Figure \@ref(fig:IPC-aggregation)B). Fitting PLT alongside IPC as an additional predictor of aggregation had little effect on the IPC effect estimate providing further evidence of independent contributions from the two traits (Figure \@ref(fig:IPC-aggregation)C). Adjustment for PLT in the regression model for the association between IPF and aggregation provided estimates of a similar magnitude to that of IPC and aggregation.
 
 
-```{r IPC-aggregation, echo = FALSE, out.height="70%", out.width="85%", fig.cap="Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants. A) Forest plot displaying the association between platelet measures (exposure) and aggregation (outcomes). B) Correlation matrix displaying the Pearson’s correlation coefficient (r) between platelet traits. C) Forest plot displaying the effect estimate for the association between immature platelet count (IPC) or immature platelet fraction (IPF) and measures of aggregation, with or without adjustment for platelet count (PLT). ADP = adenosine diphosphate, AA = arachidonic acid, MPV = mean platelet volume.", fig.scap = "Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants"}
+```{r IPC-aggregation, echo = FALSE, out.width="85%", fig.cap="Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants. A) Forest plot displaying the association between platelet measures (exposure) and aggregation (outcomes). B) Correlation matrix displaying the Pearson’s correlation coefficient (r) between platelet traits. C) Forest plot displaying the effect estimate for the association between immature platelet count (IPC) or immature platelet fraction (IPF) and measures of aggregation, with or without adjustment for platelet count (PLT). ADP = adenosine diphosphate, AA = arachidonic acid, MPV = mean platelet volume.", fig.scap = "Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants"}
 include_graphics(path = "figure/BMI_platelets/IPC_aggregation.pdf", dpi = NA)
 
 ```
 
-```{r BMI-platelet-cartoon, echo = FALSE, out.height="80%", out.width="85%", fig.cap="Graphical summary of findings"}
+```{r BMI-platelet-cartoon, echo = FALSE, out.width="90%", fig.cap="Graphical summary of findings"}
 include_graphics(path = "figure/BMI_platelets/Visual_abstract.pdf", dpi = NA)
 
 ```
