--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -1,8 +1,11 @@
-# Conclusion {-}
+# Discussion {-}
 
-If we don't want Conclusion to have a chapter number next to it, we can add the `{-}` attribute.
+## Overall findings - table or figure ???
 
-**More info**
+## Strengths and limitations
 
-And here's some other random info: the first paragraph after a chapter title or section head _shouldn't be_ indented, because indents are to tell the reader that you're starting a new paragraph. Since that's obvious after a chapter or section title, proper typesetting doesn't add an indent there.
+## Future studies
 
+## Wider implications of findings (e.g. clinical)
+
+## Overal conclusion
